content-visibility scroll fix

--- a/source/css/first.styl
+++ b/source/css/first.styl
@@ -5,7 +5,7 @@
 // https://www.caniuse.com/?search=content-visibility
 .post-story {
   content-visibility: auto;
-  contain-intrinsic-size: 1000px;
+  contain-intrinsic-size: 10px 1000px;
 }
 
 @import '_defines/*'
